--- a/pom.xml
+++ b/pom.xml
@@ -46,4 +46,48 @@
 		</plugins>
 	</build>
 
+
+
+
+  <distributionManagement>
+    <snapshotRepository>
+      <id>artifact-registry</id>
+      <url>artifactregistry://asia-south2-maven.pkg.dev/clean-axiom-352104/java-maven</url>
+    </snapshotRepository>
+  </distributionManagement>
+
+  <repositories>
+    <repository>
+      <id>artifact-registry</id>
+      <url>artifactregistry://asia-south2-maven.pkg.dev/clean-axiom-352104/java-maven</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+
+  <build>
+    <extensions>
+      <extension>
+        <groupId>com.google.cloud.artifactregistry</groupId>
+        <artifactId>artifactregistry-maven-wagon</artifactId>
+        <version>2.1.0</version>
+      </extension>
+    </extensions>
+  </build>
+
+
+
+
+
+
+
+
+
+
+
+
 </project>
